# Prism

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  README.zh-CN.md  export-worker.html  index.html  package-lock.json  package.json  prism.html  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  export_bug.yml  feature_request.yml
docs/: TESTING_CHECKLIST.md  UI_OPTIMIZATION_FINAL_REPORT.md  feature-checklist.md  miaoyan-statusbar-icon-options.html  miaoyan-theme-architecture-and-new-theme-directions.html  miaoyan-view-mode-icon-options.html  prism-1.0.3-implementation-plan.md  prism-1.0.3-optimization-guide.md  prism-1.0.3-windows-smoke-checklist.md  prism-filesystem-permissions.md  prism-goal-prompt.md  prism-macos-release.md  prism-menu-architecture-prototype.html  prism-openai-redesign.html  prism-p0-runtime-smoke.md  prism-p2-preview-audit.md  prism-product-optimization-plan.md  prism-release-checklist.md  prism-screenshot-showcase.md  prism-settings-center-optimization-plan.md  prism-settings-center-prototype.html  prism-updater-manifest.example.json
docs/adr/: 0001-adopt-openai-minimal-design.md  0002-css-token-naming.md  0003-bundle-fonts-locally.md  0004-focus-mode-soft-dim.md
docs/prototypes/: 2026-04-26-prism-code-block-proposals.html  2026-04-26-prism-icon-proposals-v10.html  2026-04-26-prism-icon-proposals-v2.html  2026-04-26-prism-icon-proposals-v6.html  2026-04-26-prism-icon-proposals-v7.html  2026-04-26-prism-icon-proposals-v8.html  2026-04-26-prism-icon-proposals-v9.html  2026-04-26-prism-icon-proposals.html  2026-04-26-prism-sidebar-prototype.html  2026-04-26-prism-status-bar-icon-proposals.html  (+12 more)
history/: markdown-editor-prototype.html  markdown-editor-v1-typora.html
scripts/: generate-updater-manifest.mjs  generate-updater-manifest.test.ts  package-macos-dmg-skip-finder.sh
src/: App.recovery.test.tsx  App.tsx  export-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.local-smoke.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+207 files in other folders)
