[package]
name = "app"
version = "1.4.0"
description = "A local-first Markdown editor for writing, preview typography, and reliable export"
authors = ["Prism contributors"]
license = "MIT"
repository = "https://github.com/AlexPlum405/Prism"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2"
trash = "=4.1.1"
